Don't cache any chunks requiring in-text

--- a/docs/inherited-diversity.Rmd
+++ b/docs/inherited-diversity.Rmd
@@ -252,7 +252,7 @@ individual would have achieved on their own.
 
 ## Methods {-}
 
-```{r methods}
+```{r methods, cache=FALSE}
 ```
 
 (ref:gems-team-structures) Team structures. Participants were trained to pay
