--- a/docs/references.bib
+++ b/docs/references.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 04 Apr 2018.
+%% Created using Papers on Sat, 28 Apr 2018.
 %% http://papersapp.com/papers/
 
 @book{Dunbar:2017bu,
@@ -274,6 +274,16 @@ volume = {32},
 number = {1},
 pages = {1--3},
 month = feb
+}
+
+@article{Newcomb:1937vy,
+author = {Newcomb, Theodore and Svehla, George},
+title = {{Intra-Family Relationships in Attitude}},
+journal = {Sociometry},
+year = {1937},
+volume = {1},
+number = {1-2},
+pages = {180--205}
 }
 
 @inproceedings{Suh:2009wo,
@@ -1211,6 +1221,17 @@ pages = {295--315},
 month = sep
 }
 
+@article{McGuigan:2011jp,
+author = {McGuigan, Nicola and Makinson, Jenny and Whiten, Andrew},
+title = {{From over-imitation to super-copying: Adults imitate causally irrelevant aspects of tool use with higher fidelity than young children}},
+journal = {British Journal of psychology},
+year = {2011},
+volume = {102},
+number = {1},
+pages = {1--18},
+month = jan
+}
+
 @article{Tajfel:1982kf,
 author = {Tajfel, H},
 title = {{Social psychology of intergroup relations}},
@@ -1454,7 +1475,7 @@ volume = {13},
 number = {10}
 }
 
-@book{kroeber1948anthropology,
+@book{Kroeber:1948ant,
 author = {Kroeber, Alfred Louis},
 title = {{Anthropology: Race, language, culture, psychology, prehistory}},
 publisher = {Harcourt, Brace New York},
@@ -1921,6 +1942,16 @@ pages = {30--32},
 month = jan
 }
 
+@article{Horner:2005bf,
+author = {Horner, Victoria and Whiten, Andrew},
+title = {{Causal knowledge and imitation/emulation switching in chimpanzees (Pan troglodytes) and children (Homo sapiens)}},
+journal = {Animal Cognition},
+year = {2005},
+volume = {8},
+number = {3},
+pages = {164--181}
+}
+
 @article{Derex:2013kk,
 author = {Derex, Maxime and Beugin, Marie-Pauline and Godelle, Bernard and Raymond, Michel},
 title = {{Experimental evidence for the influence of group size on cultural complexity}},
@@ -2349,6 +2380,14 @@ volume = {48},
 number = {10},
 pages = {75--81},
 month = oct
+}
+
+@article{Lehman:2018vd,
+author = {Lehman, J and Clune, J and Misevic, D and arXiv, C Adami arXiv preprint and {2018}},
+title = {{The Surprising Creativity of Digital Evolution: A Collection of Anecdotes from the Evolutionary Computation and Artificial Life Research Communities}},
+journal = {arxiv.org
+},
+year = {2018}
 }
 
 @inproceedings{Anonymous:8fUL2pWC,
@@ -2925,6 +2964,16 @@ title = {{Culture shapes the evolution of cognition}},
 journal = {Proceedings of the National Academy of Sciences}
 }
 
+@article{Flor:2001kc,
+author = {Flor, Douglas L and Knapp, Nancy Flanagan},
+title = {{Transmission and transaction: Predicting adolescents' internalization of parental religious values.}},
+journal = {Journal of Family Psychology},
+year = {2001},
+volume = {15},
+number = {4},
+pages = {627--645}
+}
+
 @book{Szathmary:1995uj,
 author = {Szathmary, E and Maynard Smith, John},
 title = {{The major evolutionary transitions}},
@@ -2979,7 +3028,7 @@ journal = {Available at SSRN},
 year = {2012}
 }
 
-@book{Bartlett:1933remembering,
+@book{Bartlett:1933rm,
 author = {Bartlett, Frederic Charles},
 title = {{Remembering: A study in experimental and social psychology}},
 publisher = {Cambridge University Press},
@@ -3450,12 +3499,14 @@ year = {2006}
 }
 
 @article{Chrysikou:2005ec,
-title = {{Following the Wrong Footsteps: Fixation Effects of Pictorial Examples in a Design Problem-Solving Task.}},
+author = {Chrysikou, Evangelia G and Weisberg, Robert W},
+title = {{Following the wrong footsteps: Fixation effects of pictorial examples in a design problem-solving task}},
 journal = {Journal of Experimental Psychology: Learning, Memory, and Cognition},
 year = {2005},
 volume = {31},
 number = {5},
-pages = {1134--1148}
+pages = {1134--1148},
+month = sep
 }
 
 @article{Bang:2017ez,
@@ -4165,7 +4216,7 @@ pages = {1662--1674},
 month = aug
 }
 
-@article{Anonymous:gyKOhBLz,
+@article{Axelrod:1981ec,
 author = {Axelrod, R and Hamilton, W D},
 title = {{The Evolution of Cooperation}},
 journal = {Science},
@@ -4199,6 +4250,17 @@ volume = {104},
 number = {50},
 pages = {19751--19756},
 month = dec
+}
+
+@article{Soucy:2015gp,
+author = {Soucy, Shannon M and Huang, Jinling and Gogarten, Johann Peter},
+title = {{Horizontal gene transfer: building the web of life}},
+journal = {Nature Publishing Group},
+year = {2015},
+volume = {16},
+number = {8},
+pages = {472--482},
+month = aug
 }
 
 @book{Call:fu,
